- Remove shared property from bib statistics - Filter out shadow copy links - Fix limit for bib reports